ver 0.5.0
- Changed the json formats for "choice" and "check_array"
- Added command-line utils to embed json into exe.
- Changed the json library from nlohmann/json to RapidJSON.
- Changed the format of gui_config.json
- Fixed a bug that help menu will be shown even if the length of ["help"] is 0.
- Removed more codes from wxWidgets.
- Applied optimazation for objective-c++.

ver 0.4.1
- Raise errors when the command requires more components or there are unused components.
- Error messages bacame more detailed when failed to parse commands.
- Commands will be shown in the log when loading definitions.
- Fixed a bug that "%%" won't escsape the "%" symbol.
- Fixed a bug that the window is resizable on macOS and Linux.
- Fixed typos.
- Refined codes.

ver 0.4.0
- Changed license to GPL
- Added options for exit code.
- Added predefined ids for "%" and the executable directory.
- Fixed an error when the current directory is not the same as the executable directory. (on Windows)
- URLs and file paths will be checked before opening.
- Removed more codes from wxWidgets to reduce the binary size.
- Applied some optimization options to reduce the binary size.
- Applied UPX to compress executables.
- Refined codes.

ver 0.3.1
- Added number pickers to GUI components.
- Fixed a bug that it can't open files on macOS.
- Error messages became more detailed when failed to parse json file.
- Refined codes.

ver 0.3.0
- Added "file" type to help menu.
- Added "tooltip" option to all components.
- Added options to check tool version.
- Supported alternate spellings for some json keys and values.
- Fixed a bug that error dialog can't show non-ascii characters.
- Updated wxWidgets to v3.2.2
- Removed more codes from wxWidgets to reduce the binary size.
- Refined codes.

ver 0.2.3
- Fixed errors when using non-ascii characters in labels.
- Fixed an error when a command requires more components for arguments.
- Fixed some examples that will raise the command error.