@@ -1,4 +1,4 @@
-# Simple Command Runner ver 0.4.1
+# Simple Command Runner ver 0.5.0
 
 ![build](https://github.com/matyalatte/Simple-Command-Runner/actions/workflows/build_all.yml/badge.svg)
 ![test](https://github.com/matyalatte/Simple-Command-Runner/actions/workflows/test.yml/badge.svg)
@@ -68,7 +68,7 @@ For VSCode, you can add the schema path to `settings.json` (`File > Preferences 
 
 ### react-jsonschema-form
 
-You can also make `gui_definition.json` with [web forms](https://rjsf-team.github.io/react-jsonschema-form/#eyJmb3JtRGF0YSI6eyJndWkiOltdLCJoZWxwIjpbXX0sInNjaGVtYSI6eyIkc2NoZW1hIjoiaHR0cDovL2pzb24tc2NoZW1hLm9yZy9kcmFmdC0wNy9zY2hlbWEjIiwidHlwZSI6Im9iamVjdCIsInByb3BlcnRpZXMiOnsicmVjb21tZW5kZWQiOnsiJHJlZiI6IiMvZGVmaW5pdGlvbnMvdHlwZXMvdmVyc2lvbiJ9LCJtaW5pbXVtX3JlcXVpcmVkIjp7IiRyZWYiOiIjL2RlZmluaXRpb25zL3R5cGVzL3ZlcnNpb24ifSwiZ3VpIjp7InR5cGUiOiJhcnJheSIsIml0ZW1zIjp7InR5cGUiOiJvYmplY3QiLCJwcm9wZXJ0aWVzIjp7ImxhYmVsIjp7InR5cGUiOiJzdHJpbmcifSwiY29tbWFuZCI6eyJ0eXBlIjoic3RyaW5nIn0sIndpbmRvd19uYW1lIjp7InR5cGUiOiJzdHJpbmcifSwiYnV0dG9uIjp7InR5cGUiOiJzdHJpbmcifSwic2hvd19sYXN0X2xpbmUiOnsidHlwZSI6ImJvb2xlYW4ifSwiY2hlY2tfZXhpdF9jb2RlIjp7InR5cGUiOiJib29sZWFuIn0sImV4aXRfc3VjY2VzcyI6eyJ0eXBlIjoiaW50ZWdlciJ9LCJjb21wb25lbnRzIjp7InR5cGUiOiJhcnJheSIsIml0ZW1zIjp7InR5cGUiOiJvYmplY3QiLCJwcm9wZXJ0aWVzIjp7InR5cGUiOnsidHlwZSI6InN0cmluZyIsImVudW0iOlsic3RhdGljX3RleHQiLCJmaWxlIiwiZm9sZGVyIiwiY2hvaWNlIiwiY2hlY2siLCJjaGVja19hcnJheSIsInRleHQiLCJpbnQiLCJmbG9hdCJdfSwibGFiZWwiOnsidHlwZSI6InN0cmluZyJ9LCJpZCI6eyJ0eXBlIjoic3RyaW5nIn0sImFkZF9xdW90ZXMiOnsidHlwZSI6ImJvb2xlYW4ifX0sImFsbE9mIjpbeyIkcmVmIjoiIy9kZWZpbml0aW9ucy9jb21wb25lbnRzL2ZpbGUifSx7IiRyZWYiOiIjL2RlZmluaXRpb25zL2NvbXBvbmVudHMvZm9sZGVyX29yX3RleHQifSx7IiRyZWYiOiIjL2RlZmluaXRpb25zL2NvbXBvbmVudHMvY2hlY2sifSx7IiRyZWYiOiIjL2RlZmluaXRpb25zL2NvbXBvbmVudHMvaW50In0seyIkcmVmIjoiIy9kZWZpbml0aW9ucy9jb21wb25lbnRzL2Zsb2F0In0seyIkcmVmIjoiIy9kZWZpbml0aW9ucy9jb21wb25lbnRzL2Nob2ljZSJ9LHsiJHJlZiI6IiMvZGVmaW5pdGlvbnMvY29tcG9uZW50cy9jaGVja19hcnJheSJ9XSwicmVxdWlyZWQiOlsidHlwZSIsImxhYmVsIl19fX0sInJlcXVpcmVkIjpbImxhYmVsIiwiY29tbWFuZCIsImNvbXBvbmVudHMiXX19LCJoZWxwIjp7InR5cGUiOiJhcnJheSIsIml0ZW1zIjp7InR5cGUiOiJvYmplY3QiLCJwcm9wZXJ0aWVzIjp7InR5cGUiOnsidHlwZSI6InN0cmluZyIsImVudW0iOlsidXJsIiwiZmlsZSJdfSwibGFiZWwiOnsidHlwZSI6InN0cmluZyJ9fSwicmVxdWlyZWQiOlsidHlwZSIsImxhYmVsIl0sImFsbE9mIjpbeyJpZiI6eyJwcm9wZXJ0aWVzIjp7InR5cGUiOnsiY29uc3QiOiJ1cmwifX19LCJ0aGVuIjp7InByb3BlcnRpZXMiOnsidXJsIjp7InR5cGUiOiJzdHJpbmcifSwicGF0aCI6eyJ0eXBlIjoibnVsbCJ9fX19LHsiaWYiOnsicHJvcGVydGllcyI6eyJ0eXBlIjp7ImNvbnN0IjoiZmlsZSJ9fX0sInRoZW4iOnsicHJvcGVydGllcyI6eyJ1cmwiOnsidHlwZSI6Im51bGwifSwicGF0aCI6eyJ0eXBlIjoic3RyaW5nIn19fX1dfX19LCJyZXF1aXJlZCI6WyJndWkiXSwiZGVmaW5pdGlvbnMiOnsidHlwZXMiOnsidmVyc2lvbiI6eyJ0eXBlIjoic3RyaW5nIiwicGF0dGVybiI6Il5bLjAtOV0rJCIsIm1pbkxlbmd0aCI6MSwibWF4TGVuZ3RoIjo4fX0sImNvbXBvbmVudHMiOnsiZmlsZSI6eyJpZiI6eyJwcm9wZXJ0aWVzIjp7InR5cGUiOnsiY29uc3QiOiJmaWxlIn19fSwidGhlbiI6eyJwcm9wZXJ0aWVzIjp7ImV4dGVuc2lvbiI6eyJ0eXBlIjoic3RyaW5nIn0sImVtcHR5X21lc3NhZ2UiOnsidHlwZSI6InN0cmluZyJ9LCJkZWZhdWx0Ijp7InR5cGUiOiJzdHJpbmcifSwidG9vbHRpcCI6eyJ0eXBlIjoic3RyaW5nIn19fX0sImZvbGRlcl9vcl90ZXh0Ijp7ImlmIjp7InByb3BlcnRpZXMiOnsidHlwZSI6eyJlbnVtIjpbImZvbGRlciIsInRleHQiXX19fSwidGhlbiI6eyJwcm9wZXJ0aWVzIjp7ImVtcHR5X21lc3NhZ2UiOnsidHlwZSI6InN0cmluZyJ9LCJkZWZhdWx0Ijp7InR5cGUiOiJzdHJpbmcifSwidG9vbHRpcCI6eyJ0eXBlIjoic3RyaW5nIn19fX0sImNoZWNrIjp7ImlmIjp7InByb3BlcnRpZXMiOnsidHlwZSI6eyJjb25zdCI6ImNoZWNrIn19fSwidGhlbiI6eyJwcm9wZXJ0aWVzIjp7ImRlZmF1bHQiOnsidHlwZSI6ImJvb2xlYW4ifSwidG9vbHRpcCI6eyJ0eXBlIjoic3RyaW5nIn0sInZhbHVlIjp7InR5cGUiOiJzdHJpbmcifX19fSwiaW50Ijp7ImlmIjp7InByb3BlcnRpZXMiOnsidHlwZSI6eyJjb25zdCI6ImludCJ9fX0sInRoZW4iOnsicHJvcGVydGllcyI6eyJtaW4iOnsidHlwZSI6ImludGVnZXIifSwibWF4Ijp7InR5cGUiOiJpbnRlZ2VyIn0sImluYyI6eyJ0eXBlIjoiaW50ZWdlciJ9LCJ3cmFwIjp7InR5cGUiOiJib29sZWFuIn0sImRlZmF1bHQiOnsidHlwZSI6ImludGVnZXIifSwidG9vbHRpcCI6eyJ0eXBlIjoic3RyaW5nIn19fX0sImZsb2F0Ijp7ImlmIjp7InByb3BlcnRpZXMiOnsidHlwZSI6eyJjb25zdCI6ImZsb2F0In19fSwidGhlbiI6eyJwcm9wZXJ0aWVzIjp7Im1pbiI6eyJ0eXBlIjoibnVtYmVyIn0sIm1heCI6eyJ0eXBlIjoibnVtYmVyIn0sImluYyI6eyJ0eXBlIjoibnVtYmVyIn0sIndyYXAiOnsidHlwZSI6ImJvb2xlYW4ifSwiZGlnaXRzIjp7InR5cGUiOiJpbnRlZ2VyIn0sImRlZmF1bHQiOnsidHlwZSI6Im51bWJlciJ9LCJ0b29sdGlwIjp7InR5cGUiOiJzdHJpbmcifX19fSwiY2hvaWNlIjp7ImlmIjp7InByb3BlcnRpZXMiOnsidHlwZSI6eyJjb25zdCI6ImNob2ljZSJ9fX0sInRoZW4iOnsicHJvcGVydGllcyI6eyJkZWZhdWx0Ijp7InR5cGUiOiJpbnRlZ2VyIn0sInRvb2x0aXAiOnsidHlwZSI6InN0cmluZyJ9LCJpdGVtcyI6eyJ0eXBlIjoiYXJyYXkiLCJpdGVtcyI6eyJ0eXBlIjoib2JqZWN0IiwicHJvcGVydGllcyI6eyJsYWJlbCI6eyJ0eXBlIjoic3RyaW5nIn0sInZhbHVlIjp7InR5cGUiOiJzdHJpbmcifX0sInJlcXVpcmVkIjpbImxhYmVsIl19fX19fSwiY2hlY2tfYXJyYXkiOnsiaWYiOnsicHJvcGVydGllcyI6eyJ0eXBlIjp7ImNvbnN0IjoiY2hlY2tfYXJyYXkifX19LCJ0aGVuIjp7InByb3BlcnRpZXMiOnsiaXRlbXMiOnsidHlwZSI6ImFycmF5IiwiaXRlbXMiOnsidHlwZSI6Im9iamVjdCIsInByb3BlcnRpZXMiOnsibGFiZWwiOnsidHlwZSI6InN0cmluZyJ9LCJ2YWx1ZSI6eyJ0eXBlIjoic3RyaW5nIn0sInRvb2x0aXAiOnsidHlwZSI6InN0cmluZyJ9LCJkZWZhdWx0Ijp7InR5cGUiOiJib29sZWFuIn19LCJyZXF1aXJlZCI6WyJsYWJlbCJdfX19fX19fX0sInVpU2NoZW1hIjp7fSwidGhlbWUiOiJkZWZhdWx0IiwibGl2ZVNldHRpbmdzIjp7InNob3dFcnJvckxpc3QiOiJ0b3AiLCJleHBlcmltZW50YWxfZGVmYXVsdEZvcm1TdGF0ZUJlaGF2aW9yIjp7ImFycmF5TWluSXRlbXMiOiJwb3B1bGF0ZSIsImVtcHR5T2JqZWN0RmllbGRzIjoicG9wdWxhdGVBbGxEZWZhdWx0cyJ9LCJvbWl0RXh0cmFEYXRhIjp0cnVlLCJsaXZlT21pdCI6dHJ1ZX19)
+You can also make `gui_definition.json` with [web forms](https://rjsf-team.github.io/react-jsonschema-form/#eyJmb3JtRGF0YSI6eyJndWkiOltdLCJoZWxwIjpbXX0sInNjaGVtYSI6eyIkc2NoZW1hIjoiaHR0cDovL2pzb24tc2NoZW1hLm9yZy9kcmFmdC0wNy9zY2hlbWEjIiwidHlwZSI6Im9iamVjdCIsInByb3BlcnRpZXMiOnsiZ3VpIjp7InR5cGUiOiJhcnJheSIsIml0ZW1zIjp7InR5cGUiOiJvYmplY3QiLCJwcm9wZXJ0aWVzIjp7ImxhYmVsIjp7InR5cGUiOiJzdHJpbmcifSwiY29tbWFuZCI6eyJ0eXBlIjoic3RyaW5nIn0sIndpbmRvd19uYW1lIjp7InR5cGUiOiJzdHJpbmcifSwiYnV0dG9uIjp7InR5cGUiOiJzdHJpbmcifSwic2hvd19sYXN0X2xpbmUiOnsidHlwZSI6ImJvb2xlYW4ifSwiY29tcG9uZW50cyI6eyJ0eXBlIjoiYXJyYXkiLCJpdGVtcyI6eyJ0eXBlIjoib2JqZWN0IiwicHJvcGVydGllcyI6eyJ0eXBlIjp7InR5cGUiOiJzdHJpbmciLCJlbnVtIjpbInN0YXRpY190ZXh0IiwiZmlsZSIsImZvbGRlciIsImNob2ljZSIsImNoZWNrIiwiY2hlY2tfYXJyYXkiLCJ0ZXh0IiwiaW50IiwiZmxvYXQiXX0sImxhYmVsIjp7InR5cGUiOiJzdHJpbmcifSwiaWQiOnsidHlwZSI6InN0cmluZyJ9LCJhZGRfcXVvdGVzIjp7InR5cGUiOiJib29sZWFuIn19LCJhbGxPZiI6W3siJHJlZiI6IiMvZGVmaW5pdGlvbnMvY29tcG9uZW50cy9maWxlIn0seyIkcmVmIjoiIy9kZWZpbml0aW9ucy9jb21wb25lbnRzL2ZvbGRlcl9vcl90ZXh0In0seyIkcmVmIjoiIy9kZWZpbml0aW9ucy9jb21wb25lbnRzL2NoZWNrIn0seyIkcmVmIjoiIy9kZWZpbml0aW9ucy9jb21wb25lbnRzL2ludCJ9LHsiJHJlZiI6IiMvZGVmaW5pdGlvbnMvY29tcG9uZW50cy9mbG9hdCJ9LHsiJHJlZiI6IiMvZGVmaW5pdGlvbnMvY29tcG9uZW50cy9jaG9pY2UifSx7IiRyZWYiOiIjL2RlZmluaXRpb25zL2NvbXBvbmVudHMvY2hlY2tfYXJyYXkifV0sInJlcXVpcmVkIjpbInR5cGUiLCJsYWJlbCJdfX19LCJyZXF1aXJlZCI6WyJsYWJlbCIsImNvbW1hbmQiLCJjb21wb25lbnRzIl19fSwiaGVscCI6eyJ0eXBlIjoiYXJyYXkiLCJpdGVtcyI6eyJ0eXBlIjoib2JqZWN0IiwicHJvcGVydGllcyI6eyJ0eXBlIjp7InR5cGUiOiJzdHJpbmciLCJlbnVtIjpbInVybCIsImZpbGUiXX0sImxhYmVsIjp7InR5cGUiOiJzdHJpbmcifX0sInJlcXVpcmVkIjpbInR5cGUiLCJsYWJlbCJdLCJhbGxPZiI6W3siaWYiOnsicHJvcGVydGllcyI6eyJ0eXBlIjp7ImNvbnN0IjoidXJsIn19fSwidGhlbiI6eyJwcm9wZXJ0aWVzIjp7InVybCI6eyJ0eXBlIjoic3RyaW5nIn0sInBhdGgiOnsidHlwZSI6Im51bGwifX19fSx7ImlmIjp7InByb3BlcnRpZXMiOnsidHlwZSI6eyJjb25zdCI6ImZpbGUifX19LCJ0aGVuIjp7InByb3BlcnRpZXMiOnsidXJsIjp7InR5cGUiOiJudWxsIn0sInBhdGgiOnsidHlwZSI6InN0cmluZyJ9fX19XX19fSwicmVxdWlyZWQiOlsiZ3VpIl0sImRlZmluaXRpb25zIjp7ImNvbXBvbmVudHMiOnsiZmlsZSI6eyJpZiI6eyJwcm9wZXJ0aWVzIjp7InR5cGUiOnsiY29uc3QiOiJmaWxlIn19fSwidGhlbiI6eyJwcm9wZXJ0aWVzIjp7ImV4dGVuc2lvbiI6eyJ0eXBlIjoic3RyaW5nIn0sImVtcHR5X21lc3NhZ2UiOnsidHlwZSI6InN0cmluZyJ9LCJkZWZhdWx0Ijp7InR5cGUiOiJzdHJpbmcifSwidG9vbHRpcCI6eyJ0eXBlIjoic3RyaW5nIn19fX0sImZvbGRlcl9vcl90ZXh0Ijp7ImlmIjp7InByb3BlcnRpZXMiOnsidHlwZSI6eyJlbnVtIjpbImZvbGRlciIsInRleHQiXX19fSwidGhlbiI6eyJwcm9wZXJ0aWVzIjp7ImVtcHR5X21lc3NhZ2UiOnsidHlwZSI6InN0cmluZyJ9LCJkZWZhdWx0Ijp7InR5cGUiOiJzdHJpbmcifSwidG9vbHRpcCI6eyJ0eXBlIjoic3RyaW5nIn19fX0sImNoZWNrIjp7ImlmIjp7InByb3BlcnRpZXMiOnsidHlwZSI6eyJjb25zdCI6ImNoZWNrIn19fSwidGhlbiI6eyJwcm9wZXJ0aWVzIjp7ImRlZmF1bHQiOnsidHlwZSI6ImJvb2xlYW4ifSwidG9vbHRpcCI6eyJ0eXBlIjoic3RyaW5nIn0sInZhbHVlIjp7InR5cGUiOiJzdHJpbmcifX19fSwiaW50Ijp7ImlmIjp7InByb3BlcnRpZXMiOnsidHlwZSI6eyJjb25zdCI6ImludCJ9fX0sInRoZW4iOnsicHJvcGVydGllcyI6eyJtaW4iOnsidHlwZSI6ImludGVnZXIifSwibWF4Ijp7InR5cGUiOiJpbnRlZ2VyIn0sImluYyI6eyJ0eXBlIjoiaW50ZWdlciJ9LCJ3cmFwIjp7InR5cGUiOiJib29sZWFuIn0sImRlZmF1bHQiOnsidHlwZSI6ImludGVnZXIifSwidG9vbHRpcCI6eyJ0eXBlIjoic3RyaW5nIn19fX0sImZsb2F0Ijp7ImlmIjp7InByb3BlcnRpZXMiOnsidHlwZSI6eyJjb25zdCI6ImZsb2F0In19fSwidGhlbiI6eyJwcm9wZXJ0aWVzIjp7Im1pbiI6eyJ0eXBlIjoibnVtYmVyIn0sIm1heCI6eyJ0eXBlIjoibnVtYmVyIn0sImluYyI6eyJ0eXBlIjoibnVtYmVyIn0sIndyYXAiOnsidHlwZSI6ImJvb2xlYW4ifSwiZGlnaXRzIjp7InR5cGUiOiJpbnRlZ2VyIn0sImRlZmF1bHQiOnsidHlwZSI6Im51bWJlciJ9LCJ0b29sdGlwIjp7InR5cGUiOiJzdHJpbmcifX19fSwiY2hvaWNlIjp7ImlmIjp7InByb3BlcnRpZXMiOnsidHlwZSI6eyJjb25zdCI6ImNob2ljZSJ9fX0sInRoZW4iOnsicHJvcGVydGllcyI6eyJkZWZhdWx0Ijp7InR5cGUiOiJpbnRlZ2VyIn0sInRvb2x0aXAiOnsidHlwZSI6InN0cmluZyJ9LCJpdGVtcyI6eyJ0eXBlIjoiYXJyYXkiLCJpdGVtcyI6eyJ0eXBlIjoib2JqZWN0IiwicHJvcGVydGllcyI6eyJsYWJlbCI6eyJ0eXBlIjoic3RyaW5nIn0sInZhbHVlIjp7InR5cGUiOiJzdHJpbmcifX0sInJlcXVpcmVkIjpbImxhYmVsIl19fX19fSwiY2hlY2tfYXJyYXkiOnsiaWYiOnsicHJvcGVydGllcyI6eyJ0eXBlIjp7ImNvbnN0IjoiY2hlY2tfYXJyYXkifX19LCJ0aGVuIjp7InByb3BlcnRpZXMiOnsiaXRlbXMiOnsidHlwZSI6ImFycmF5IiwiaXRlbXMiOnsidHlwZSI6Im9iamVjdCIsInByb3BlcnRpZXMiOnsibGFiZWwiOnsidHlwZSI6InN0cmluZyJ9LCJ2YWx1ZSI6eyJ0eXBlIjoic3RyaW5nIn0sInRvb2x0aXAiOnsidHlwZSI6InN0cmluZyJ9LCJkZWZhdWx0Ijp7InR5cGUiOiJib29sZWFuIn19LCJyZXF1aXJlZCI6WyJsYWJlbCJdfX19fX19fX0sInVpU2NoZW1hIjp7fSwidGhlbWUiOiJkZWZhdWx0IiwibGl2ZVNldHRpbmdzIjp7InNob3dFcnJvckxpc3QiOiJ0b3AiLCJleHBlcmltZW50YWxfZGVmYXVsdEZvcm1TdGF0ZUJlaGF2aW9yIjp7ImFycmF5TWluSXRlbXMiOiJwb3B1bGF0ZSIsImVtcHR5T2JqZWN0RmllbGRzIjoicG9wdWxhdGVBbGxEZWZhdWx0cyJ9LCJvbWl0RXh0cmFEYXRhIjp0cnVlLCJsaXZlT21pdCI6dHJ1ZX19)
 
 ## FAQ
 
